card component added

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="d-flex justify-content-center w-100">
                 <div class="d-flex flex-column gap-1 w-75">
-                    <span class="text-white">راجب پی میخوای بدونی؟</span>
+                    <span class="text-white">راجب چی میخوای بدونی؟</span>
                     <div class="d-flex w-100 gap-3">
                         <input class="w-100 rounded px-2" type="text" placeholder="پروژه">
                         <button class="btn w-100 btn-primary">جست و جو</button>
@@ -24,6 +24,14 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <div class="container">
+            <div class="w-100 row">
+
+            </div>
+        </div>
+    </main>
 
 </body>
 
