--- a/src/index.html
+++ b/src/index.html
@@ -17,21 +17,29 @@
                 <div class="d-flex flex-column gap-1 w-75">
                     <span class="text-white">راجب چی میخوای بدونی؟</span>
                     <div class="d-flex w-100 gap-3">
-                        <input class="w-100 rounded px-2" type="text" placeholder="پروژه">
-                        <button class="btn w-100 btn-primary">جست و جو</button>
+                        <input class="w-100 rounded px-2" dir="auto" type="text" placeholder="پروژه">
+                        <button class="btn w-100 btn-primary" id="search-btn">جست و جو</button>
                     </div>
                 </div>
             </div>
         </div>
     </header>
 
-    <main>
+    <main class="py-5">
         <div class="container">
-            <div class="w-100 row">
+            <div class="d-flex justify-content-center">
+                <h3 class="main-header-text"></h3>
+                <div class="spinner-border d-none" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+            <div class="w-100 row gy-4 gx-4 justify-content-center mx-0" id="news-list">
 
             </div>
         </div>
     </main>
+
+    <script type="module" src="./index.js"></script>
 
 </body>
 
