--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
     </main>
-
+    <script src="./libraries/farvardin/dist/farvardin.min.js"></script>
     <script type="module" src="./index.js"></script>
 
 </body>
