--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
         <div class="container">
             <div class="d-flex justify-content-center w-100">
                 <div class="d-flex flex-column gap-1 w-75">
-                    <span class="text-white">راجب چی میخوای بدونی؟</span>
+                    <span class="text-white font-Anjoman">راجب چی میخوای بدونی؟</span>
                     <div class="d-flex w-100 gap-3">
                         <input class="w-100 rounded px-2" dir="auto" type="text" placeholder="پروژه">
-                        <button class="btn w-100 btn-primary" id="search-btn">جست و جو</button>
+                        <button class="btn w-100 btn-primary font-Anjoman" id="search-btn">جست و جو</button>
                     </div>
                 </div>
             </div>
@@ -28,7 +28,7 @@
     <main class="py-5">
         <div class="container">
             <div class="d-flex justify-content-center">
-                <h3 class="main-header-text"></h3>
+                <h3 class="main-header-text font-Anjoman"></h3>
                 <div class="spinner-border d-none" role="status">
                     <span class="visually-hidden">Loading...</span>
                 </div>
